--- a/css/ch.css
+++ b/css/ch.css
@@ -696,8 +696,10 @@ footer {
 }
 
 .sec2 {
+  justify-content: center;
   display: grid;
-  grid-template-columns: 1fr 200px 200px 200px;
+  margin: 10px;
+  grid-template-columns: 50% 200px 200px 200px;
   grid-template-rows: 100px 80px auto;
 }
 
