--- a/css/ht.css
+++ b/css/ht.css
@@ -3,10 +3,16 @@
 
 @media (min-width: 1025px) and (max-width: 1280px) {
   /*Tablet portrait*/
+  .sec1 {
+    margin-top: 50px !important;
+  }
 }
 
 @media (min-width: 768px) and (max-width: 1024px) { 
     /*Tablet landscape*/
+    .sec1 {
+      margin-top: 50px !important;
+    }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
