--- a/css/index.css
+++ b/css/index.css
@@ -1,13 +1,29 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
-@media only screen and (max-width: 540px) {
+@media (min-width: 1025px) and (max-width: 1280px) {
+  /*Tablet portrait*/
+  .sec1 {
+    margin-top: 50px !important;
+  }
 }
 
-@media only screen and (max-width: 485px) {
+@media (min-width: 768px) and (max-width: 1024px) { 
+    /*Tablet landscape*/
+    .sec1 {
+      margin-top: 50px !important;
+    }
 }
 
-.head {
+@media (min-width: 481px) and (max-width: 767px) {
+  /*Smarphone*/
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  /*Smaller smartphone*/
+}
+
+.sec1 {
   padding-top: 80px;
   padding-left: 10px;
   padding-bottom: 30px;
@@ -16,11 +32,11 @@
   text-align: center;
 }
 
-.head a {
+.sec1 a {
   text-decoration: none;
 }
 
-.head a:hover {
+.sec1 a:hover {
   color: #1d0e72;
 }
 
