--- a/css/index.css
+++ b/css/index.css
@@ -17,10 +17,58 @@
 
 @media (min-width: 481px) and (max-width: 767px) {
   /*Smarphone*/
+  .sec1_desktop img {
+    display: none;
+  }
+  .sec1 h1 {
+    top: 30% !important;
+    background-color: rgb(0, 0, 0, 0.65);
+    border-radius: 4px;
+    padding: 10px 0 180px 0;
+    margin: 0 30px 0 30px;
+    color: #fff;
+  }
+  .sec1 p {
+    top: 44% !important;
+    margin: 0 30px 0 30px;
+    color: #fff;
+  }
+  .sec1 button {
+    top: 57% !important;
+    background-color: #00000015;
+    border-radius: 10px;
+  }
+  .hm_mobile {
+    z-index: -1;
+  }
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
   /*Smaller smartphone*/
+  .sec1_desktop img {
+    display: none;
+  }
+  .sec1 h1 {
+    top: 30% !important;
+    background-color: rgb(0, 0, 0, 0.65);
+    border-radius: 4px;
+    padding: 10px 0 180px 0;
+    margin: 0 30px 0 30px;
+    color: #fff;
+  }
+  .sec1 p {
+    top: 44% !important;
+    margin: 0 30px 0 30px;
+    color: #fff;
+  }
+  .sec1 button {
+    top: 57% !important;
+    background-color: #00000015;
+    border-radius: 10px;
+  }
+  .hm_mobile {
+    z-index: -1;
+  }
 }
 
 .sec1 {
