--- a/css/ch.css
+++ b/css/ch.css
@@ -31,7 +31,7 @@
 
   .sec1 img {
     grid-column: 1/1 !important;
-    grid-row: 3/3 !important;
+    grid-row: 7/7 !important;
   }
 
   .sec2 {
@@ -198,7 +198,7 @@ footer {
   display: grid;
   margin: 20px 20px 0px 0px;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-rows: 2fr 1fr 2fr 2fr 2fr 2fr;
 }
 
 .sec1 img{
@@ -206,13 +206,29 @@ footer {
   width: 100%;
   height: auto;
   grid-column: 1/1;
-  grid-row: 1/3;
+  grid-row: 1/7;
 }
 
 .sec1 p {
   margin: 0 15% 0 15%;
   grid-column: 2/2;
   grid-row: 2/2;
+}
+
+.par2 {
+  grid-row: 3/3 !important;
+}
+
+.par3 {
+  grid-row: 4/4 !important;
+}
+
+.par4 {
+  grid-row: 5/5 !important;
+}
+
+.par5 {
+  grid-row: 6/6 !important;
 }
 
 .sec1 h1 {
