--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -14,6 +14,16 @@
   }
 }
 
+@media (min-width: 481px) and (max-width: 767) {
+  /*Smartphone*/
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .sec1 p {
+    top: 65% !important;
+  }
+}
+
 header {
   transition: background-color 350ms ease-in-out;
 }
